--- a/diep_frontend/src/html/index.html
+++ b/diep_frontend/src/html/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diep Front</title>
-    <link rel="stylesheet" href="css/style.css" >
+    <link rel="stylesheet" href="../css/style.css" >
 </head>
 <body>
     <canvas class="map" id="map"></canvas>
-    <script src="js/index.js" type="module"></script>
+    <script src="../js/index.js" type="module"></script>
 </body>
 </html>
