--- a/diep_frontend/src/html/index.html
+++ b/diep_frontend/src/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/style.css" >
 </head>
 <body>
-    <section class="join-form-wrapper">
+    <section class="join-form-wrapper" id="join-form-wrapper">
         <h1>Welcome to diep.io game!</h1>
         <h3>Add your name and join the game</h3>
         <form class="join-form" id="join-form">
